--- a/rust-tooling/generate/Cargo.toml
+++ b/rust-tooling/generate/Cargo.toml
@@ -6,7 +6,13 @@ description = "Generates exercise boilerplate, especially test cases"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lints.clippy]
+unwrap_used = "warn"
+expect_used = "warn"
+panic = "warn"
+
 [dependencies]
+anyhow = "1.0.81"
 clap = { version = "4.4.8", features = ["derive"] }
 convert_case = "0.6.0"
 glob = "0.3.1"
