--- a/exercises/practice/all-your-base/.meta/tests.toml
+++ b/exercises/practice/all-your-base/.meta/tests.toml
@@ -1,6 +1,13 @@
-# This is an auto-generated file. Regular comments will be removed when this
-# file is regenerated. Regenerating will not touch any manually added keys,
-# so comments can be added in a "comment" key.
+# This is an auto-generated file.
+#
+# Regenerating this file via `configlet sync` will:
+# - Recreate every `description` key/value pair
+# - Recreate every `reimplements` key/value pair, where they exist in problem-specifications
+# - Remove any `include = true` key/value pair (an omitted `include` key implies inclusion)
+# - Preserve any other key/value pair
+#
+# As user-added comments (using the # character) will be removed when this file
+# is regenerated, comments can be added via a `comment` key.
 
 [5ce422f9-7a4b-4f44-ad29-49c67cb32d2c]
 description = "single bit one to decimal"
@@ -23,6 +30,9 @@ description = "trinary to hexadecimal"
 [d3901c80-8190-41b9-bd86-38d988efa956]
 description = "hexadecimal to trinary"
 
+[5d42f85e-21ad-41bd-b9be-a3e8e4258bbf]
+description = "15-bit integer"
+
 [d68788f7-66dd-43f8-a543-f15b6d233f83]
 description = "empty list"
 
@@ -41,6 +51,16 @@ description = "input base is one"
 [e21a693a-7a69-450b-b393-27415c26a016]
 description = "input base is zero"
 
+[54a23be5-d99e-41cc-88e0-a650ffe5fcc2]
+description = "input base is negative"
+include = false
+comment = "we use unsigned integers"
+
+[9eccf60c-dcc9-407b-95d8-c37b8be56bb6]
+description = "negative digit"
+include = false
+comment = "we use unsigned integers"
+
 [232fa4a5-e761-4939-ba0c-ed046cd0676a]
 description = "invalid positive digit"
 
@@ -49,3 +69,13 @@ description = "output base is one"
 
 [73dac367-da5c-4a37-95fe-c87fad0a4047]
 description = "output base is zero"
+
+[13f81f42-ff53-4e24-89d9-37603a48ebd9]
+description = "output base is negative"
+include = false
+comment = "we use unsigned integers"
+
+[0e6c895d-8a5d-4868-a345-309d094cfe8d]
+description = "both bases are negative"
+include = false
+comment = "we use unsigned integers"
