--- a/rust-tooling/generate/Cargo.toml
+++ b/rust-tooling/generate/Cargo.toml
@@ -18,7 +18,7 @@ convert_case = "0.6.0"
 glob = "0.3.1"
 inquire = "0.6.2"
 models = { version = "0.1.0", path = "../models" }
-serde_json = { version = "1.0.105", features = ["preserve_order"] }
+serde_json = { version = "1.0.105", features = ["arbitrary_precision", "preserve_order"] }
 slug = "0.1.5"
 tera = "1.19.1"
 utils = { version = "0.1.0", path = "../utils" }
