Remove unused ignore-count-ignores
After having removed all macro-based testing, this is no longer needed.

--- a/exercises/practice/paasio/.meta/config.json
+++ b/exercises/practice/paasio/.meta/config.json
@@ -29,8 +29,5 @@
   },
   "blurb": "Report network IO statistics.",
   "source": "Brian Matsuo",
-  "source_url": "https://github.com/bmatsuo",
-  "custom": {
-    "ignore-count-ignores": true
-  }
+  "source_url": "https://github.com/bmatsuo"
 }
