--- a/exercises/practice/xorcism/.meta/config.json
+++ b/exercises/practice/xorcism/.meta/config.json
@@ -24,7 +24,6 @@
   "blurb": "Implement zero-copy streaming adaptors",
   "source": "Peter Goodspeed-Niklaus",
   "custom": {
-    "allowed-to-not-compile": "The point of this exercise is for students to figure out the appropriate function signatures and generic bounds for their implementations, so we cannot provide those.",
-    "ignore-count-ignores": true
+    "allowed-to-not-compile": "The point of this exercise is for students to figure out the appropriate function signatures and generic bounds for their implementations, so we cannot provide those."
   }
 }
